First commit of entire project

--- a/app/globals.css
+++ b/app/globals.css
@@ -277,7 +277,7 @@
 
   /* Card */
   .file-card {
-    @apply flex cursor-pointer flex-col gap-6 rounded-[18px] bg-white p-5 shadow-sm transition-all hover:shadow-drop-3 !important;
+    @apply flex cursor-pointer flex-col gap-6 rounded-[18px] bg-white p-5 shadow-sm transition-all hover:shadow-drop-3 pointer-events-auto !important;
   }
   .file-card-details {
     @apply flex flex-col gap-2 text-light-100 !important;
